<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>no.nav.vedtak.prosesstask</groupId>
	<artifactId>prosesstask-root</artifactId>
	<name>Prosesstask :: Root</name>
        <version>0.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<description>Library to process asynchronous, persistent tasks.</description>

	<organization>
		<name>no.nav</name>
		<url>https://github.com/navikt</url>
	</organization>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://opensource.org/licenses/MIT</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<organization>NAV (Arbeids- og velferdsdirektoratet) - The Norwegian Labour and Welfare Administration
			</organization>
			<organizationUrl>https://www.nav.no</organizationUrl>
		</developer>
	</developers>

	<modules>
		<module>task</module>
		<module>legacy</module>
		<module>rest</module>
	</modules>

	<properties>
		<java.version>16</java.version>

		<argLine>-Dfile.encoding=UTF-8</argLine>
		<additionalparam>-Xdoclint:none</additionalparam>

		<!-- SonarCloud options -->
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
		<sonar.organization>navit</sonar.organization>

	</properties>

	<repositories>
		<repository>
			<id>github</id>
			<name>GitHub Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/navikt/fp-felles/</url>
		</repository>
	</repositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.flywaydb</groupId>
				<artifactId>flyway-core</artifactId>
				<version>7.8.2</version>
			</dependency>

			<dependency>
				<groupId>no.nav.foreldrepenger.felles</groupId>
				<artifactId>felles</artifactId>
				<scope>import</scope>
				<type>pom</type>
				<version>4.0.10</version>
			</dependency>

			<dependency>
				<groupId>no.nav.vedtak.prosesstask</groupId>
				<artifactId>prosesstask</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>no.nav.vedtak.prosesstask</groupId>
				<artifactId>prosesstask-rest-api</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>no.nav.vedtak.prosesstask</groupId>
				<artifactId>prosesstask-legacy</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>no.nav.vedtak.prosesstask</groupId>
				<artifactId>prosesstask-doc</artifactId>
				<version>${project.version}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<dependencies>

		<!-- trengs for workaround for HHH-11020 for å kunne kalle EntityManager.unwrap -->
		<dependency>
			<groupId>org.jboss.weld.se</groupId>
			<artifactId>weld-se-core</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-plus</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- test avhengigheter -->
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.8.7</version>
					<executions>
						<execution>
							<goals>
								<goal>prepare-agent</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>exec-maven-plugin</artifactId>
					<version>3.0.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>3.2.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.2.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<encoding>UTF-8</encoding>
						<release>${java.version}</release>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>3.0.0-M1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>3.0.0-M1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.2.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>2.22.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.2.1</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>flatten-maven-plugin</artifactId>
					<version>1.2.7</version>
				</plugin>

				<plugin>
					<groupId>org.sonarsource.scanner.maven</groupId>
					<artifactId>sonar-maven-plugin</artifactId>
					<version>3.9.0.2155</version>
				</plugin>
			</plugins>

		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<configuration>
					<flattenedPomFilename>.flattened</flattenedPomFilename>
					<flattenMode>bom</flattenMode>
				</configuration>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten.clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>report</id>
						<goals>
							<goal>report-aggregate</goal>
						</goals>
						<phase>verify</phase>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<executions>
					<execution>
						<id>failsafe-integration-test</id>
						<goals>
							<goal>integration-test</goal>
						</goals>
					</execution>
					<execution>
						<id>failsafe-verify</id>
						<goals>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.jboss.jandex</groupId>
				<artifactId>jandex-maven-plugin</artifactId>
				<version>1.1.1</version>
				<executions>
					<execution>
						<id>make-index</id>
						<goals>
							<goal>jandex</goal>
						</goals>
						<configuration>
							<!-- Nothing needed here for simple cases -->
						</configuration>
					</execution>
				</executions>
			</plugin>


		</plugins>
	</build>

	<scm>
		<connection>scm:git:https://github.com/navikt/fp-prosesstask.git</connection>
		<developerConnection>scm:git:https://github.com/navikt/fp-prosesstask.git</developerConnection>
		<url>https://github.com/navikt/fp-prosesstask/</url>
	</scm>

	<distributionManagement>
		<repository>
			<id>github-1</id>
			<name>Github navikt Maven Packages</name>
			<url>https://maven.pkg.github.com/navikt/fp-prosesstask</url>
		</repository>
	</distributionManagement>

</project>
